// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Note basic 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note with DS Text components 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          <h3
            data-css-xhd98s=""
          >
            Bob Ross
          </h3>
        </div>
      </div>
      <p
        data-css-1djw98v=""
      >
        Be so very light. Be a gentle whisper. If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. It is a lot of fun.
      </p>
      <p
        data-css-1djw98v=""
      >
        So often we avoid running water, and running water is a lot of fun. Just beat the devil out of it. Work that paint. A beautiful little sunset. This painting comes right out of your heart.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note with h1 in heading 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          <h1>
            Bob Ross
          </h1>
        </div>
      </div>
      <p
        data-css-1djw98v=""
      >
        Be so very light. Be a gentle whisper. If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. It is a lot of fun.
      </p>
      <p
        data-css-1djw98v=""
      >
        So often we avoid running water, and running water is a lot of fun. Just beat the devil out of it. Work that paint. A beautiful little sunset. This painting comes right out of your heart.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note with linked avatar 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <a
        href="https://duck.com?q=pluralsight"
      >
        <div
          aria-hidden={true}
          data-css-79vgce=""
        >
          <img
            data-css-d7y6x2=""
            onError={[Function]}
            onLoad={[Function]}
            src="//picsum.photos/128"
          />
          <div
            aria-label="Bob Ross"
            data-css-1h1qs66=""
            style={
              Object {
                "backgroundColor": "#CB670B",
              }
            }
          >
            B
          </div>
        </div>
      </a>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note with linked heading 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          <p>
            <a
              data-css-di03rb=""
              href="#"
            >
              Bob Ross
            </a>
          </p>
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note without avatar and author 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-odzpq7=""
    >
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions no author - long metadata 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-odzpq7=""
    >
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            It is impossible to count the grand contributions of this great author
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            A length of such amazing lengthitude so-as to blow the mind
          </span>
        </div>
        <div
          data-css-1wdz5wp=""
        >
          <button
            data-css-td0jeq=""
            title="Bookmark"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="bookmark icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions no author - no metadata 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-odzpq7=""
    >
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-5g9w0h=""
        >
          <button
            data-css-td0jeq=""
            title="Bookmark"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="bookmark icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions one action 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
        <div
          data-css-5g9w0h=""
        >
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions three actions 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
        <div
          data-css-5g9w0h=""
        >
          <button
            data-css-td0jeq=""
            title="Bookmark"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="bookmark icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="Analytics"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="analytics icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="M5.999 8.724A1.976 1.976 0 015 9a2 2 0 111.999-2.008l4.002 2.286C11.296 9.106 11.635 9 12 9c.178 0 .347.031.511.074l4.563-4.562A1.997 1.997 0 0117 4a2 2 0 112 2c-.178 0-.348-.029-.512-.073l-4.562 4.562c.043.165.074.333.074.511a2 2 0 01-3.999.01L5.999 8.724zM22 11v10h2v2H0v-2h2v-8c0-.551.448-1 1-1h4c.552 0 1 .449 1 1v8h1v-5c0-.551.448-1 1-1h4c.552 0 1 .449 1 1v5h1V11c0-.551.448-1 1-1h4c.552 0 1 .449 1 1zM4 21h2v-7H4v7zm9 0v-4h-2v4h2zm5 0h2v-9h-2v9z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions two actions 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
        <div
          data-css-5g9w0h=""
        >
          <button
            data-css-td0jeq=""
            title="Bookmark"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="bookmark icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions visible on hover 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
        <div
          data-css-lcnfz=""
        >
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions with an action menu 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
        <div
          data-css-5g9w0h=""
        >
          <button
            data-css-td0jeq=""
            onClick={[Function]}
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
          <div
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions with long heading 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          This is probably the greatest thing that's ever happened in my life
        </div>
        <div
          data-css-5g9w0h=""
        >
          <button
            data-css-td0jeq=""
            title="Bookmark"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="bookmark icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/actions without author 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-odzpq7=""
    >
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            meta second
          </span>
        </div>
        <div
          data-css-1wdz5wp=""
        >
          <button
            data-css-td0jeq=""
            title="Bookmark"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="bookmark icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-td0jeq=""
            title="More"
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/in a list basic 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <ol
    data-css-17bsnt1=""
  >
    <li
      data-css-pu8y6x=""
    >
      <div
        data-css-ae1vww=""
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          data-css-1kfsc44=""
        >
          <div
            aria-hidden={true}
            data-css-79vgce=""
          >
            <img
              data-css-d7y6x2=""
              onError={[Function]}
              onLoad={[Function]}
              src="//picsum.photos/128"
            />
            <div
              aria-label="Bob Ross"
              data-css-1h1qs66=""
              style={
                Object {
                  "backgroundColor": "#CB670B",
                }
              }
            >
              B
            </div>
          </div>
        </div>
        <div
          data-css-odzpq7=""
        >
          <div
            data-css-1wkpnw7=""
          >
            <div
              data-css-15wuh48=""
            >
              Bob Ross
            </div>
          </div>
          <p>
            If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
          </p>
          <div
            data-css-126k7w0=""
          >
            <div
              data-css-1afye6p=""
            >
              <span
                data-css-1plyjau=""
              >
                meta first
              </span>
              <span
                aria-hidden={true}
                data-css-kykfz1=""
              >
                ·
              </span>
              <span
                data-css-1plyjau=""
              >
                meta second
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      data-css-pu8y6x=""
    >
      <div
        data-css-ae1vww=""
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          data-css-1kfsc44=""
        >
          <div
            aria-hidden={true}
            data-css-79vgce=""
          >
            <img
              data-css-d7y6x2=""
              onError={[Function]}
              onLoad={[Function]}
              src="//picsum.photos/128"
            />
            <div
              aria-label="Bob Ross"
              data-css-1h1qs66=""
              style={
                Object {
                  "backgroundColor": "#CB670B",
                }
              }
            >
              B
            </div>
          </div>
        </div>
        <div
          data-css-odzpq7=""
        >
          <div
            data-css-1wkpnw7=""
          >
            <div
              data-css-15wuh48=""
            >
              Bob Ross
            </div>
          </div>
          <p>
            If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
          </p>
          <div
            data-css-126k7w0=""
          >
            <div
              data-css-1afye6p=""
            >
              <span
                data-css-1plyjau=""
              >
                meta first
              </span>
              <span
                aria-hidden={true}
                data-css-kykfz1=""
              >
                ·
              </span>
              <span
                data-css-1plyjau=""
              >
                meta second
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      data-css-pu8y6x=""
    >
      <div
        data-css-ae1vww=""
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          data-css-1kfsc44=""
        >
          <div
            aria-hidden={true}
            data-css-79vgce=""
          >
            <img
              data-css-d7y6x2=""
              onError={[Function]}
              onLoad={[Function]}
              src="//picsum.photos/128"
            />
            <div
              aria-label="Bob Ross"
              data-css-1h1qs66=""
              style={
                Object {
                  "backgroundColor": "#CB670B",
                }
              }
            >
              B
            </div>
          </div>
        </div>
        <div
          data-css-odzpq7=""
        >
          <div
            data-css-1wkpnw7=""
          >
            <div
              data-css-15wuh48=""
            >
              Bob Ross
            </div>
          </div>
          <p>
            If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
          </p>
          <div
            data-css-126k7w0=""
          >
            <div
              data-css-1afye6p=""
            >
              <span
                data-css-1plyjau=""
              >
                meta first
              </span>
              <span
                aria-hidden={true}
                data-css-kykfz1=""
              >
                ·
              </span>
              <span
                data-css-1plyjau=""
              >
                meta second
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Note/metadata as a link 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            <a
              data-css-1ud2sxh=""
              href="#"
            >
              i'm a link
            </a>
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            <a
              data-css-di03rb=""
              href="#"
            >
              i'm a subtle link
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Note/metadata with long strings 1`] = `
<div
  style={
    Object {
      "maxWidth": "420px",
    }
  }
>
  <div
    data-css-ae1vww=""
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      data-css-1kfsc44=""
    >
      <div
        aria-hidden={true}
        data-css-79vgce=""
      >
        <img
          data-css-d7y6x2=""
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          data-css-1h1qs66=""
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      data-css-odzpq7=""
    >
      <div
        data-css-1wkpnw7=""
      >
        <div
          data-css-15wuh48=""
        >
          Bob Ross
        </div>
      </div>
      <p>
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        data-css-126k7w0=""
      >
        <div
          data-css-1afye6p=""
        >
          <span
            data-css-1plyjau=""
          >
            It is impossible to count the grand contributions of this great author
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1plyjau=""
          >
            A length of such amazing lengthitude so-as to blow the mind
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
